--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Docker Login
-        uses: docker/login-action@v1
+        uses: ./
         with:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }} 
-          DOCKERHUB_TOKEN: ${{ secrets.DOCEKRHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }} 
+          password: ${{ secrets.DOCEKRHUB_TOKEN }}
           ecr: false
       - name: build a docker image
         run: docker build --no-cache --build-arg base_image=${base_image} -t ${prefix_image_name}/hccl_demo:${GITHUB_SHA} .
