--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Docker Login
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2.0.0
         with:
-          password: ${{ secrets.DOCEKRHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCEKRHUB_TOKEN }}
       - name: build a docker image
         run: docker build --no-cache --build-arg base_image=${base_image} -t ${prefix_image_name}/hccl_demo:${GITHUB_SHA} .
