--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@v1.1.0
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        with:
+          args: >
+            -Dsonar.projectKey=hccl_demo
       - name: Docker Login
         uses: docker/login-action@v2.0.0
         with:
